# plex-o-tron

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Changelog.md  INSTRUCTIONS.md  README.md  TODO.txt  ToDo.md  __main__.py  agents.md  auto_download_requirements.md  basedpyright_log.txt  bot_fast.txt  bot_slow.txt  config.ini  config.ini.template  download_torrent.py  persistence.json  pre_commit_results.txt  pre_commit_results_2.txt  project_instructions.md  pyproject.toml  pyrightconfig.json  requirements.txt  roadmap.md  telegram_bot.py  test_results.txt  test_results_mock.txt  test_results_mock_2.txt  test_results_mock_3.txt  test_results_mock_4.txt  todo.md  tracking_release_overrides.example.json  tracking_state.json  tv_search_failure.txt  unknown_error.txt
docs/: auto-download-implementation-plan.md  keyboard-layout-reference.md  schedule-movie-collection-plan.md  schedule-rewrite-plan.md  services.md
libtorrent/: __init__.py
scripts/: __init__.py  changelog_hooks.py  create_plex_collection_from_folder.py  dry_run_movie_search.py  find_two_digit_dash_files.sh  fix_media_permissions.sh  fix_posters.py  reset_plex_library_db.sh  upgrade_movies.py
telegram_bot/: __init__.py  _ptb_env.py  config.py  plex_restart.py  state.py  utils.py
telegram_bot/domain/: __init__.py  types.py
telegram_bot/handlers/: callback_handlers.py  command_handlers.py  error_handler.py  message_handlers.py
telegram_bot/scrapers/: generic.py  generic_scraper.py
telegram_bot/services/: README.md  auth_service.py  download_manager.py  generic_torrent_scraper.py  interfaces.py  media_manager.py  plex_adapters.py  plex_service.py  scraping_service.py  search_logic.py  tmdb_collection_service.py  torrent_data.py  torrent_service.py
telegram_bot/ui/: home_menu.py  keyboards.py  messages.py  views.py
telegram_bot/utility_scripts/: generate_scraper_config.py  get_plex_token.py  probe_movie_release_dates.py  probe_tmdb_collection_details.py  restart_plex.ps1  setup_bot.ps1  setup_bot.sh  setup_config.ps1  setup_config.sh  simulate_tracking_scheduler.py
telegram_bot/workflows/: __init__.py  delete_workflow.py  franchise_workflow.py  navigation.py  search_parser.py  search_session.py  search_workflow.py
tests/: _ptb_env.py  conftest.py  test_batch_scanning.py  test_config.py  test_health_metric.py  test_state.py  test_utils.py
tests/contracts/: test_download_manager_contracts.py  test_media_manager_contracts.py  test_plex_service_contracts.py  test_scraping_service_contracts.py  test_search_logic_contracts.py  test_service_exports.py  test_service_interfaces.py  test_torrent_service_contracts.py
tests/handlers/: test_callback_handlers.py  test_command_handlers.py  test_error_handler.py  test_message_handlers.py
tests/interactive_scripts/: _configured_context.py  audit_configured_search.py  audit_discovery_search.py  test_1337x_scraper.py  (+4 more)
(+145 files in other folders)
