# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-o-tron-bot"
version = "0.1.0"
description = "A Telegram bot that automates the process of downloading torrents and organizing them for a Plex media server."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Ryan", email = "your_email@example.com" },
]

# Core runtime dependencies for the bot to function
dependencies = [
    "beautifulsoup4",
    "lxml",
    "flask",
    "python-telegram-bot",
    "wikipedia",
    "libtorrent",
    "plexapi",
    "thefuzz",
    "python-Levenshtein",
    "httpx[http2]",
]

[project.optional-dependencies]
# Dependencies for development, testing, and code quality
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pre-commit",
    "basedpyright"
]

# --- Tool Configurations ---

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
